Fixed overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1902,3 +1902,7 @@ span.addplanitem__index {
 
   line-height: 120%;
 }
+
+.dayc_mount {
+  border-bottom: 1px solid #ffffff;
+}
